# SpinModels

./: .gitignore  CMakeLists.txt  Makefile  README.md
inc/: ising.hpp  utils.hpp
lib/: ising.cpp
src/: Makefile  README.md  main.cpp
